adding db diagrams

--- a/auth/templates/signup.html
+++ b/auth/templates/signup.html
@@ -2,6 +2,17 @@
 
 {% block title %}Signup{% endblock %}
 {% block content %}
-Signup
+<h1>Signup</h1>
+<p>Signup button for parents, or school, or providers</p>
+<p>add checkbox to show who they want to signup for (tell them the requirements ahead of time, like if you are signing
+    up as a provider,
+    you will be asked to send a proof of inspection, if you signup as a school, the principal of the school will be
+    contacted to confirm
+    participation. OR should they start signing up and THEN in the email confirmation we tell them this info? I think we
+    should
+    send them the email first (if they already started the process it's easier to continue than for them to not start
+    yet and already shoot them down)
+</p>
+
 
 {% endblock %}
