--- a/parents/templates/parents_home.html
+++ b/parents/templates/parents_home.html
@@ -2,6 +2,17 @@
 
 {% block title %}Parents' Home{% endblock %}
 {% block content %}
-Parents' Home
-
+<h1>Welcome Parents</h1>
+<p>Describe why using local diverse providers are important, how they can help their kids be less picky eaters, etc.
+</p>
+<p>Search their school to see if their school is participating.</p>
+<p> If so, do you want to signup to this site to become a member of the school lunches committee (SLC), and
+    have a say in choosing the provider?
+<p>
+<p>If their school is not participating yet, provide them with a template to send an email to the principal to ask them
+    to look at the Program.
+    Or should they input their principal's email and we can email them from the site? I think this may spam the
+    principal's email if too many people email, but will too many people email??
+</p>
+<p>Look for participating restaurants</p>
 {% endblock %}
