signup and emailing working but no error checking yet

--- a/auth/templates/forgot_password.html
+++ b/auth/templates/forgot_password.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Forgot password{% endblock %}
+{% block title %}Forgot or new password{% endblock %}
 {% block content %}
-Forgot password
+<h1>Forgot or new password set</h1>
+<p>Automatically log them in once they set their password. Go to their dashboard</p>
+<p>must be 8 characters, no other constraints</p>
 
 {% endblock %}
