--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -2,6 +2,8 @@
 
 {% block title %}Login{% endblock %}
 {% block content %}
-Login
+<h1>Login</h1>
+<p>Login with email address/username and password</p>
+<p>Once logged in, take them to dashboard</p>
 
 {% endblock %}
