--- a/general/templates/browsing.html
+++ b/general/templates/browsing.html
@@ -2,6 +2,7 @@
 
 {% block title %}For browsing clients{% endblock %}
 {% block content %}
-Just browsing!
+<h1>Just browsing</h1>
+<p>Could be potential providers, parents or schools (do some marketing here)</p>
 
 {% endblock %}
