--- a/general/templates/home.html
+++ b/general/templates/home.html
@@ -10,17 +10,17 @@
 <h4>Choose your portal (this could be 3 big pictures they can click or 3 whole sections but they have to know that it's
     a portal door)</h4>
 <section>
-    <button><a href="/providers">I am a restaurant owner or caterer (provider of school lunches)</a></button>
+    <button><a href="/providers/learn_more">I am a restaurant owner or caterer (provider of school lunches)</a></button>
 </section>
 <section>
-    <button><a href="/schools"></a>I am a school</a></button>
+    <button><a href="/schools/learn_more">I am a school</a></button>
 </section>
 <section>
-    <button><a href="/parents"></a>I am a parent</a></button>
+    <button><a href="/parents/learn_more">I am a parent</a></button>
 </section>
 <section>
     <p>Not sure if i need this section because it's just searching for schools or providers that are participating</p>
-    <button><a href="/browsing"></a>I am just looking around</a></button>
+    <button><a href="/browsing">I am just looking around</a></button>
 </section>
 
 {% endblock %}
