--- a/providers/templates/provider_home.html
+++ b/providers/templates/provider_home.html
@@ -2,6 +2,8 @@
 
 {% block title %}Provider's home{% endblock %}
 {% block content %}
-Provider's home
+<h1>Provider Dashboard</h1>
+<p>allow them to their restaurant information, menu, etc. (should this page just be displaying data and not editing?
+    Then a button to edit each component?)</p>
 
 {% endblock %}
