--- a/schools/templates/schools_home.html
+++ b/schools/templates/schools_home.html
@@ -2,6 +2,7 @@
 
 {% block title %}Schools' home{% endblock %}
 {% block content %}
-Schools' home
+<h1>School Dashboard</h1>
+<p>Same as the provider's, this should be a place they can edit their information</p>
 
 {% endblock %}
