resetting password with jwt works but no error checking

--- a/auth/templates/set_password.html
+++ b/auth/templates/set_password.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Forgot or new password{% endblock %}
+{% block title %}Set password{% endblock %}
 {% block content %}
-<h1>Forgot or new password set</h1>
-<form id="resetPassword" method="POST">
+<h1>Set password</h1>
+<form id="setPassword" method="POST">
+    <input type="hidden" name="email" value="{{email}}" />
     {{ form.hidden_tag() }}
     {% for field in form
     if field.widget.input_type !='hidden' %}
@@ -15,10 +16,10 @@
         {% endfor%}
     </p>
     {% endfor %}
-    <button>Send email to set/Reset Password</button>
+    <button>Set Password</button>
 </form>
 
-<p>Automatically log them in once they set their password. Go to their dashboard</p>
+<p>Automatically log them in</p>
 <p>must be 8 characters, no other constraints</p>
 
 {% endblock %}
