--- a/general/templates/home.html
+++ b/general/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1>Home for School Lunches</h1>
-
+<p><a href="/login">Login</a></p>
 <p>Here is some description of the program, what's in it for each group in brief (need to lure them in with nice short
     words and pictures!)</p>
 <h4>Choose your portal (this could be 3 big pictures they can click or 3 whole sections but they have to know that it's
