--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         {% endif %}
         {% endwith %}
     </section>
+    <a href="/login">Login</a> <a href="/logout">Logout</a>
     {% block content %} {%endblock%}
 </body>
 
