--- a/providers/templates/learn_more.html
+++ b/providers/templates/learn_more.html
@@ -3,6 +3,7 @@
 {% block title %}Provider's Onboarding{% endblock %}
 {% block content %}
 <h1>Provider Onboarding Page</h1>
+<p>Tell them about how they have to show inspection report</p>
 <p>More marketing stuff and then if they're interested, <a href="/signup">signup!</a></p>
 
 {% endblock %}
