--- a/providers/templates/providers_home.html
+++ b/providers/templates/providers_home.html
@@ -3,6 +3,17 @@
 {% block title %}Provider's home{% endblock %}
 {% block content %}
 <h1>Provider Dashboard</h1>
+<section>
+    <div class="info">
+        <p>Just displaying saved info</p>
+        <table>
+            <tr>
+                <td>{{}}</td>
+            </tr>
+        </table>
+
+    </div>
+</section>
 <p>allow them to their restaurant information, menu, etc. (should this page just be displaying data and not editing?
     Then a button to edit each component?)</p>
 
