fixed db problems

--- a/providers/templates/providers_home.html
+++ b/providers/templates/providers_home.html
@@ -6,10 +6,33 @@
 <section>
     <div class="info">
         <p>Just displaying saved info</p>
-        <table>
-            <tr>
-                <td>{{}}</td>
-            </tr>
+        <ul>
+            <li>
+                Name: {{p.name}}
+            </li>
+            <li>
+                Address: {{p.address}}
+            </li>
+            <li>
+                City: {{p.city_id}}
+            </li>
+            <li>
+                Province: {{p.province_id}}
+            </li>
+            <li>
+                Phone: {{p.phone}}
+            </li>
+            <li>
+                Contact Name: {{p.contact_name}}
+            </li>
+            <li>
+                Sales pitch: {{p.sales_pitch}}
+            </li>
+            <li>
+                Active: {{p.active}}
+            </li>
+        </ul>
+
         </table>
 
     </div>
