--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,10 @@
         {% endwith %}
     </section>
     <a href="/login">Login</a> <a href="/logout">Logout</a>
+
     {% block content %} {%endblock%}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    {% block scripts %} {%endblock%}
 </body>
 
 </html>
