--- a/providers/templates/providers_home.html
+++ b/providers/templates/providers_home.html
@@ -81,17 +81,20 @@
     <h3>Catering settings</h3>
     <ul>
         <li>
-            Number of meals you can serve at one time for one organization: {{p.max_meals_per_day}}
+            Number of meals you can serve at one time for one organization: {%if p.max_meals_per_day
+            %}{{p.max_meals_per_day}}{% endif %}
         </li>
         <li>
-            Minimum number of meals you will serve at one time for one organization: {{p.min_meals}}
+            Minimum number of meals you will serve at one time for one organization: {%if p.min_meals
+            %}{{p.min_meals}}{% endif %}
         </li>
         <li>
-            Number of organizations you can serve in one day: {{p.serve_num_org_per_day}}
+            Number of organizations you can serve in one day: {%if p.serve_num_org_per_day
+            %}{{p.serve_num_org_per_day}}{% endif %}
         </li>
     </ul>
+    <button><a href="/providers/edit_menu">Edit</a></button>
 </section>
-<p>allow them to their restaurant information, menu, etc. (should this page just be displaying data and not editing?
-    Then a button to edit each component?)</p>
+
 
 {% endblock %}
