--- a/providers/templates/providers_home.html
+++ b/providers/templates/providers_home.html
@@ -93,7 +93,8 @@
             %}{{p.serve_num_org_per_day}}{% endif %}
         </li>
     </ul>
-    <button><a href="/providers/edit_menu">Edit</a></button>
+    <button {% if menuDisable=="true" %}disabled {%endif%}>
+        <a {% if not menuDisable=="true" %} href="/providers/edit_menu" {%endif%}>Edit</a></button>
 </section>
 
 
