--- a/providers/templates/providers_edit_info.html
+++ b/providers/templates/providers_edit_info.html
@@ -14,7 +14,7 @@
     <p><span>Please select from autocomplete. This will ensure our search feature will work. </span><br>
         {{form.address.label}}:
     <div class="typedAddress">{{form.address}}
-        <div class="autoAddress">
+        <div class="autoAddress pointer">
         </div>
     </div>
     </p>
@@ -37,23 +37,34 @@
     <p>
         {{form.sales_pitch.label}}: {{form.sales_pitch}}
     </p>
-
     <p>
+        {%if pc%}
         {% set a=namespace(quit = False) %}
-        {% for c in form_c.cuisines %}
+        {%else %}
+        {%set a=namespace(quit=True)%}
+        {%endif%}
+
+        {% for for c in form_c.cuisines %}
+
         {% for id in pc if not a.quit %}
         {%if id.cuisine_id == c.data %}
         {{c(checked=True)}}
         {% set a.quit = True%}
         {%endif%}
+
         {%endfor%}
-        {%if not a.quit%}
+
+        {%if (not a.quit and pc) or (a.quit and not pc)%}
         {{c}}
         {%endif %}
+
+        {%if pc%}
         {%set a.quit = False%}
+        {%endif%}
 
         {{c.label}}
         {% endfor %}
+
     </p>
     <p>
         {{form.active.label}}: {{form.active}}
